# notanobile

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  dbtest.sql  fly.toml  manage.py  package-lock.json  postgres_backup.dump  pyproject.toml  requirements.txt
.github/: CODEOWNERS
main_app/: admin.py  form_meal.py  form_reservation.py  form_signup.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_rename_meals_meal.py  0003_meal_user.py  0004_photo.py  0005_reservation.py  0006_aboutus.py  0007_chef.py  0008_why_choose_us.py  0009_auto_20230821_1901.py  0010_category_alter_aboutus_options.py  0011_meal_category.py  0012_alter_reservation_date.py  0013_alter_reservation_date.py  0014_alter_reservation_phone.py  0015_wine.py  0016_meal_wines.py  0017_meal_ingredients.py  0018_alter_reservation_date_alter_reservation_time.py  0019_reservation_user.py  0020_aboutus_image.py  0021_reservation_first_name_reservation_last_name.py  0022_remove_reservation_first_name_and_more.py  0023_alter_meal_image.py  0024_alter_chef_image.py
main_app/static/css/: style.css
main_app/templates/: about.html  base.html  home.html
main_app/templates/aboutus/: about_us.html
main_app/templates/contact/: contact.html  success.html
main_app/templates/main_app/: meal_confirm_delete.html  meal_form.html  reservation_confirm_delete.html  reservation_detail.html  reservation_form.html  reservation_list.html  wine_confirm_delete.html  (+3 more)
notanobile/: .env  asgi.py  settings.py  urls.py  wsgi.py
notanobile/settings/: __init__.py  local.py  prod.py
(+15 files in other folders)
