[tool.poetry]
name = "notanobile"
version = "0.1.0"
description = ""
authors = ["menth0s <marslite@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
dj-database-url = "^2.1.0"
daphne = "^4.0.0"
psycopg2-binary = "^2.9.7"
boto3 = "^1.28.34"
django-environ = "^0.10.0"
requests = "^2.31.0"
bootstrap4 = "^0.1.0"
pillow = "^10.0.0"
django-bootstrap4 = "^23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
